// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rules > create confirm password rule 1`] = `
[
  {
    "message": "请再次输入密码",
    "required": true,
    "trigger": [
      "input",
      "blur",
    ],
  },
  {
    "message": "两次密码输入不一致",
    "trigger": [
      "blur",
      "password-input",
    ],
    "validator": [Function],
  },
]
`;

exports[`rules > create name rule 1`] = `
[
  {
    "message": "请输入帐号",
    "required": true,
    "trigger": "blur",
  },
  {
    "message": "长度要大于 6 小于 25",
    "trigger": "blur",
    "validator": [Function],
  },
]
`;

exports[`rules > create password rule 1`] = `
[
  {
    "message": "请输入密码",
    "required": true,
    "trigger": "blur",
  },
  {
    "message": "长度要大于 6 小于 30",
    "trigger": "blur",
    "validator": [Function],
  },
]
`;
